# Perk-signalops-agent

./: .gitignore  README.md  app.py  pyproject.toml  run_pipeline.py  seed_top_accounts.py
data/: replay_llm_responses.json  sample_leads.csv
src/signalops/: __init__.py  discovery.py  framework.py  llm.py  models.py  pipeline.py  seed_data.py  storage.py
src/signalops/steps/: enrichment.py  research.py  routing.py  scoring.py  writeback.py
src/signalops/tools/: http.py
tests/: test_activity_log.py  test_discovery.py  test_pipeline.py  test_routing.py  test_storage.py
