[project]
name = "perk-signalops-agent"
version = "0.1.0"
description = "Production-shaped account research and qualification agent for a Perk-style revenue systems workflow."
requires-python = ">=3.10"
dependencies = ["streamlit>=1.36"]

[tool.poetry]
package-mode = false

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
